<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.kinvey.bookshelf.ShelfActivity">
    <item
        android:id="@+id/action_pull10k"
        android:orderInCategory="100"
        android:title="@string/action_pull10k"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_pull50k"
        android:orderInCategory="100"
        android:title="@string/action_pull50k"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_pull100k"
        android:orderInCategory="100"
        android:title="@string/action_pull100k"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_open_cache_benchmark"
        android:orderInCategory="100"
        android:title="@string/action_open_cache_benchmark"
        app:showAsAction="ifRoom"/>


</menu>
