<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kinvey.bookshelf.CacheBenchmarkActivity">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/create_items_et"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/create_items"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/create_items" />
        </LinearLayout>
            <Button
                android:layout_gravity="center"
                android:id="@+id/get_items_all_with_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_items_all_with_query" />
            <Button
                android:layout_gravity="center"
                android:id="@+id/get_items_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_items_all" />
        <Button
            android:layout_gravity="center"
            android:id="@+id/get_items_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_items_one" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
